Include new endpoint for upcoming season animes
